# ml-prep-journal

./: .pre-commit-config.yaml  README.md  setup.cfg
metrics/losses/: mean_square_error.py
mljournal/: __init__.py
mljournal/metrics/: __init__.py  core.py
mljournal/metrics/losses/: __init__.py  mean_square_error.py
mljournal/models/: __init__.py  core.py  linear.py
models/: linear.py
notebooks/: linear-regression.ipynb
run/: test1.py
tests/metrics/losses/: test_mean_square_error.py
tests/models/: test_linear.py
