[metadata]
name = mljournal
version = 0.0.1
authors = Rafael Felix
author_email = rafafelixphd@gmail.com
description = utils helpers for Machine Learning
long_description = file: README.md, LICENSE
keywords = mljournal
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
python_requires = >=3.9, <4
# package_dir=
    # =mljournal
packages=find:

[options.packages.find]
where=.

[options.package_data]
* = *.md
mljournal.metrics = *.txt
mljournal.models = *.txt
mljournal.utils = *.txt

[options.extras_require]
test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-mock>=3.10.0
    numpy>=1.20.0